spacing to prevent adding new column view from touching border

--- a/client/src/routes/table/edit/table-edit.css
+++ b/client/src/routes/table/edit/table-edit.css
@@ -8,6 +8,7 @@
 
 .white-card{
     width: 50%;
+    padding: 2px;
     padding-bottom: 10px;
     background-color: #fffffe;
     margin: 0 auto;
